--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,14 @@
   <link rel="shortcut icon" href="./images/favicon.png" type="image/png">
   <!-- Styles -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.css"/>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="./css/desktop-states.css" media="(min-width: 769px)">
   <link rel="stylesheet" href="./css/mobile-states.css" media="(max-width: 768px)">
   <link rel="stylesheet" href="./css/index.css">
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/emoji-mart@5.6.0/dist/browser.js" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.min.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js" defer></script>
   <script src="./js/index.js" type="module"></script>
 
 </head>
@@ -233,7 +235,87 @@
 
     </header>
 
-    <main class="main"></main>
+    <main class="main">
+
+      <article class="about custom-bg" data-title="about">
+
+        <div class="block-intro about__block-intro">
+          <h2 class="block-intro__title head-text" data-lang="about-title">What We Do?</h2>
+          <p class="block-intro__subtitle parag-text" data-lang="about-sub">By implementing modern Internet technologies, we help our Clients to achieve their goals and solve problems effectively, striving to do it better than competitors do, and offering optimal effective solutions taking into account the interests of each Client, with sincere care and maximum possible attention.</p>
+        </div>
+
+        <div class="about__content">
+
+          <button class="button button--common link-text" data-popup="popup-msg--com" data-lang="about-btn">Ask a question</button>
+
+          <div class="skills-slider">
+
+            <div class="skills-slider__panel">
+
+              <div class="pagination skills-slider__pagination"></div>
+
+              <div class="slider-controls">
+
+                <button class="slider-controls__btn slider-controls__btn--prev">
+                  <img src="./images/icons/arrow.png" alt="prev" class="slider-controls__icon">
+                </button>
+
+                <button class="slider-controls__btn slider-controls__btn--next">
+                  <img src="./images/icons/arrow.png" alt="next" class="slider-controls__icon">
+                </button>
+
+              </div>
+
+            </div>
+
+            <div class="swiper skills-slider__main" id="skillsSlider">
+              <div class="swiper-wrapper">
+
+                <div class="swiper-slide" data-key="about-sub">
+                  <div class="skills-slider__slide">
+
+                    <p class="skills-slider__title slide-text" data-lang="about-s1-title">We have already strong skills and we are not stopping on achieved in following:</p>
+
+                    <ul class="skills-slider__list">
+                      <li class="skills-slider__li parag-text" data-lang="about-s1-li1">Programming Languages: HTML5, CSS3, PHP, JavaScript (AngularJS, ReactJS NodeJS, jQuery)</li>
+                      <li class="skills-slider__li parag-text" data-lang="about-s1-li2">Content Management Systems (CMS): Wordpress, Opencart, Drupal</li>
+                      <li class="skills-slider__li parag-text" data-lang="about-s1-li3">Version Control System (VCS): SVN GIT GitLab GitHub Bitbucket</li>
+                      <li class="skills-slider__li parag-text" data-lang="about-s1-li4">Software as a Service (SAAS): Amazon Web Services, Rackspace Cloud</li>
+                      <li class="skills-slider__li parag-text" data-lang="about-s1-li5">Integration of different Application Programming Interface (API)</li>
+                    </ul>
+
+                    <a href="#" target="_blank" class="skills-slider__link succ-text" data-lang="about-link">Find out more</a>
+                  
+                  </div>
+                </div>
+
+                <div class="swiper-slide" data-key="about-sub2">
+                  <div class="skills-slider__slide">
+
+                    <p class="skills-slider__title slide-text" data-lang="about-s2-title">We have a strong background in the areas below:</p>
+
+                    <ul class="skills-slider__list">
+                      <li class="skills-slider__li parag-text" data-lang="about-s2-li1">Website design and development</li>
+                      <li class="skills-slider__li parag-text" data-lang="about-s2-li2">Website integration and maintenance</li>
+                      <li class="skills-slider__li parag-text" data-lang="about-s2-li3">Customized e-commerce development</li>
+                      <li class="skills-slider__li parag-text" data-lang="about-s2-li4">CMS development/integration</li>
+                    </ul>
+
+                    <a href="#" target="_blank" class="skills-slider__link succ-text" data-lang="about-link">Find out more</a>
+
+                  </div>
+                </div>
+
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+
+      </article>
+
+    </main>
 
     <footer class="footer"></footer>
 
