Basic version of tools-block done

--- a/src/index.html
+++ b/src/index.html
@@ -210,7 +210,6 @@
         </div>
 
         <span class="explore head-intro__explore small-text" data-lang="explore">Scroll to explore</span>
-        <span class="explore explore--mobile head-intro__explore small-text" data-lang="explore-mob">Swipe to explore</span>
 
       </article>
 
@@ -256,7 +255,7 @@
 
               <div class="pagination skills-slider__pagination"></div>
 
-              <div class="slider-controls">
+              <div class="slider-controls skills-slider__slider-controls">
 
                 <button class="slider-controls__btn slider-controls__btn--prev">
                   <img src="./images/icons/arrow.png" alt="prev" class="slider-controls__icon">
@@ -270,46 +269,181 @@
 
             </div>
 
-            <div class="swiper skills-slider__main" id="skillsSlider">
-              <div class="swiper-wrapper">
+            <div class="skills-slider__line-wrapper">
+              <div class="swiper skills-slider__main" id="skillsSlider">
+                <div class="swiper-wrapper">
 
-                <div class="swiper-slide" data-key="about-sub">
-                  <div class="skills-slider__slide">
+                  <div class="swiper-slide" data-key="about-sub">
+                    <article class="skills-slider__slide">
 
-                    <p class="skills-slider__title slide-text" data-lang="about-s1-title">We have already strong skills and we are not stopping on achieved in following:</p>
+                      <h3 class="skills-slider__title slide-text" data-lang="about-s1-title">We have already strong skills and we are not stopping on achieved in following:</h3>
 
-                    <ul class="skills-slider__list">
-                      <li class="skills-slider__li parag-text" data-lang="about-s1-li1">Programming Languages: HTML5, CSS3, PHP, JavaScript (AngularJS, ReactJS NodeJS, jQuery)</li>
-                      <li class="skills-slider__li parag-text" data-lang="about-s1-li2">Content Management Systems (CMS): Wordpress, Opencart, Drupal</li>
-                      <li class="skills-slider__li parag-text" data-lang="about-s1-li3">Version Control System (VCS): SVN GIT GitLab GitHub Bitbucket</li>
-                      <li class="skills-slider__li parag-text" data-lang="about-s1-li4">Software as a Service (SAAS): Amazon Web Services, Rackspace Cloud</li>
-                      <li class="skills-slider__li parag-text" data-lang="about-s1-li5">Integration of different Application Programming Interface (API)</li>
-                    </ul>
+                      <ul class="skills-slider__list">
+                        <li class="skills-slider__li parag-text" data-lang="about-s1-li1">Programming Languages: HTML5, CSS3, PHP, JavaScript (AngularJS, ReactJS NodeJS, jQuery)</li>
+                        <li class="skills-slider__li parag-text" data-lang="about-s1-li2">Content Management Systems (CMS): Wordpress, Opencart, Drupal</li>
+                        <li class="skills-slider__li parag-text" data-lang="about-s1-li3">Version Control System (VCS): SVN GIT GitLab GitHub Bitbucket</li>
+                        <li class="skills-slider__li parag-text" data-lang="about-s1-li4">Software as a Service (SAAS): Amazon Web Services, Rackspace Cloud</li>
+                        <li class="skills-slider__li parag-text" data-lang="about-s1-li5">Integration of different Application Programming Interface (API)</li>
+                      </ul>
 
-                    <a href="#" target="_blank" class="skills-slider__link succ-text" data-lang="about-link">Find out more</a>
-                  
+                      <a href="#" target="_blank" class="skills-slider__link succ-text" data-lang="about-link">Find out more</a>
+                    
+                    </article>
                   </div>
-                </div>
 
-                <div class="swiper-slide" data-key="about-sub2">
-                  <div class="skills-slider__slide">
+                  <div class="swiper-slide" data-key="about-sub2">
+                    <article class="skills-slider__slide">
 
-                    <p class="skills-slider__title slide-text" data-lang="about-s2-title">We have a strong background in the areas below:</p>
+                      <h3 class="skills-slider__title slide-text" data-lang="about-s2-title">We have a strong background in the areas below:</h3>
 
-                    <ul class="skills-slider__list">
-                      <li class="skills-slider__li parag-text" data-lang="about-s2-li1">Website design and development</li>
-                      <li class="skills-slider__li parag-text" data-lang="about-s2-li2">Website integration and maintenance</li>
-                      <li class="skills-slider__li parag-text" data-lang="about-s2-li3">Customized e-commerce development</li>
-                      <li class="skills-slider__li parag-text" data-lang="about-s2-li4">CMS development/integration</li>
-                    </ul>
+                      <ul class="skills-slider__list">
+                        <li class="skills-slider__li parag-text" data-lang="about-s2-li1">Website design and development</li>
+                        <li class="skills-slider__li parag-text" data-lang="about-s2-li2">Website integration and maintenance</li>
+                        <li class="skills-slider__li parag-text" data-lang="about-s2-li3">Customized e-commerce development</li>
+                        <li class="skills-slider__li parag-text" data-lang="about-s2-li4">CMS development/integration</li>
+                      </ul>
 
-                    <a href="#" target="_blank" class="skills-slider__link succ-text" data-lang="about-link">Find out more</a>
+                      <a href="#" target="_blank" class="skills-slider__link succ-text" data-lang="about-link">Find out more</a>
 
+                    </article>
                   </div>
-                </div>
 
+                </div>
               </div>
             </div>
+
+          </div>
+
+        </div>
+
+      </article>
+
+      <article class="tools" data-title="tools">
+
+        <div class="block-intro tools__block-intro">
+
+          <em class="block-intro__label label-text" data-lang="tools-label">Technology</em>
+          <h2 class="block-intro__title head-text" data-lang="tools-title">Tools We Use</h2>
+          <p class="block-intro__subtitle parag-text" data-lang="tools-sub">Contact that lead developer and discuss technical points in detail</p>
+
+          <div class="block-intro__controls">
+
+            <button class="button button--common link-text" data-popup="popup-msg--com" data-lang="tools-btn">Contact the lead developer</button>
+            <span class="explore small-text" data-lang="explore">Scroll to explore</span>
+
+          </div>
+
+        </div>
+
+        <div class="slider">
+
+          <div class="pagination slider__pagination"></div>
+
+          <div class="swiper slider__main" id="toolsSlider">
+            <div class="swiper-wrapper">
+
+              <div class="swiper-slide">
+                <article class="tool-slide">
+
+                  <div class="tool-slide__logotype">
+                    <img src="./images/icons/css.png" alt="css3" class="tool-slide__img tool-slide__img--css">
+                  </div>
+
+                  <div class="tool-slide__info">
+                    <h3 class="tool-slide__title h-text" data-lang="t-slide-title1">Markup</h3>
+                    <em class="tool-slide__subtitle small-text" data-lang="t-slide-text1">HTML, CSS, SASS, Semantic, W3C Valid</em>
+                  </div>
+
+                </article>
+              </div>
+
+              <div class="swiper-slide">
+                <article class="tool-slide">
+
+                  <div class="tool-slide__logotype">
+                    <img src="./images/icons/bootstrap.png" alt="bootstrap" class="tool-slide__img tool-slide__img--bs">
+                  </div>
+
+                  <div class="tool-slide__info">
+                    <h3 class="tool-slide__title h-text" data-lang="t-slide-title2">UI-Frameworks</h3>
+                    <em class="tool-slide__subtitle small-text" data-lang="t-slide-text2">Bootstrap 3,4,5, Material-UI, Tailwind</em>
+                  </div>
+
+                </article>
+              </div>
+
+              <div class="swiper-slide">
+                <article class="tool-slide">
+
+                  <div class="tool-slide__logotype">
+                    <img src="./images/icons/wordpress.png" alt="wordpress" class="tool-slide__img">
+                  </div>
+
+                  <div class="tool-slide__info">
+                    <h3 class="tool-slide__title h-text" data-lang="t-slide-title3">Content Management</h3>
+                    <em class="tool-slide__subtitle small-text" data-lang="t-slide-text3">WordPress</em>
+                  </div>
+
+                </article>
+              </div>
+
+              <div class="swiper-slide">
+                <article class="tool-slide">
+
+                  <div class="tool-slide__logotype">
+                    <img src="./images/icons/speed-insights.png" alt="pagespeed" class="tool-slide__img">
+                  </div>
+
+                  <div class="tool-slide__info">
+                    <h3 class="tool-slide__title h-text" data-lang="t-slide-title4">Speed Optimization</h3>
+                    <em class="tool-slide__subtitle small-text" data-lang="t-slide-text4">Google pages speed insights to 100%</em>
+                  </div>
+
+                </article>
+              </div>
+
+              <div class="swiper-slide">
+                <article class="tool-slide">
+
+                  <div class="tool-slide__logotype">
+                    <img src="./images/icons/fox.png" alt="fox" class="tool-slide__img">
+                  </div>
+
+                  <div class="tool-slide__info">
+                    <h3 class="tool-slide__title h-text" data-lang="t-slide-title5">Control Version System</h3>
+                    <em class="tool-slide__subtitle small-text" data-lang="t-slide-text5">GitHub, GitLab, Bitbucket</em>
+                  </div>
+
+                </article>
+              </div>
+
+              <div class="swiper-slide">
+                <article class="tool-slide">
+
+                  <div class="tool-slide__logotype">
+                    <img src="./images/icons/js.png" alt="javascript" class="tool-slide__img tool-slide__img--js">
+                  </div>
+
+                  <div class="tool-slide__info">
+                    <h3 class="tool-slide__title h-text" data-lang="t-slide-title6">JavaScript</h3>
+                    <em class="tool-slide__subtitle small-text" data-lang="t-slide-text6">JavaScript Vanilla JS, React.jx, Angular</em>
+                  </div>
+
+                </article>
+              </div>
+
+            </div>
+          </div>
+
+          <div class="slider-controls slider__slider-controls">
+
+            <button class="slider-controls__btn slider-controls__btn--prev">
+              <img src="./images/icons/arrow.png" alt="prev" class="slider-controls__icon">
+            </button>
+
+            <button class="slider-controls__btn slider-controls__btn--next">
+              <img src="./images/icons/arrow.png" alt="next" class="slider-controls__icon">
+            </button>
 
           </div>
 
