Adaptive for tools-block done

--- a/src/index.html
+++ b/src/index.html
@@ -329,13 +329,13 @@
           <div class="block-intro__controls">
 
             <button class="button button--common link-text" data-popup="popup-msg--com" data-lang="tools-btn">Contact the lead developer</button>
-            <span class="explore small-text" data-lang="explore">Scroll to explore</span>
+            <span class="explore tools__explore small-text" data-lang="explore">Scroll to explore</span>
 
           </div>
 
         </div>
 
-        <div class="slider">
+        <div class="slider tools__slider">
 
           <div class="pagination slider__pagination"></div>
 
