--- a/src/index.html
+++ b/src/index.html
@@ -822,6 +822,211 @@
 
       </article>
 
+      <article class="works" data-title="works">
+
+        <div class="block-intro works__block-intro">
+
+          <em class="block-intro__label label-text" data-lang="works-label">Showcase</em>
+          <h2 class="block-intro__title head-text" data-lang="works-title">Recent Works</h2>
+          <p class="block-intro__subtitle parag-text" data-lang="works-sub">We will help to develop your best project based on your idea.</p>
+          <button class="button works__button button--common link-text" data-lang="works-button">View More Projects</button>
+
+        </div>
+
+        <div class="works__content">
+
+          <div class="slider works__slider">
+
+            <div class="pagination slider__pagination">
+              <span class="pagination__current pag-text">01</span>
+              <span class="pagination__total pag-text">06</span>
+            </div>
+
+            <div class="swiper slider__main" id="worksSlider" data-load-block>
+              <div class="swiper-wrapper">
+
+                <div class="swiper-slide">
+                  <article class="work-slide">
+
+                    <img src="./images/preloader.svg" data-load="./images/icons/wordpress.png" alt="wp" class="work-slide__label">
+
+                    <div class="work-slide__img-wrapper">
+                      <img src="./images/preloader.svg" data-load="./images/illustrations/thc.png" alt="THC" class="work-slide__image">
+                    </div>
+
+                    <div class="work-slide__body">
+
+                      <div class="work-slide__info">
+                        <h3 class="work-slide__title name-text">THC</h3>
+                        <p class="work-slide__text work-text" data-lang="works-text1">Creating a site from scratch on React, Gatsby, back-end on WordPress.</p>
+                      </div>
+
+                      <div class="work-slide__controls">
+                        <a href="#" target="_blank" class="work-slide__link role-text" data-lang="works-link">Website</a>
+                        <button class="button work-slide__button button--team role-text" data-lang="works-btn">Learn more</button>
+                      </div>
+
+                    </div>
+
+                  </article>
+                </div>
+
+                <div class="swiper-slide">
+                  <article class="work-slide">
+
+                    <img src="./images/preloader.svg" data-load="./images/icons/wordpress.png" alt="wp" class="work-slide__label">
+
+                    <div class="work-slide__img-wrapper">
+                      <img src="./images/preloader.svg" data-load="./images/illustrations/rose.png" alt="Rose" class="work-slide__image">
+                    </div>
+
+                    <div class="work-slide__body">
+
+                      <div class="work-slide__info">
+                        <h3 class="work-slide__title name-text">RoseWellness</h3>
+                        <p class="work-slide__text work-text" data-lang="works-text2">Complete overhaul of an existing site and increased Pagespeed.</p>
+                      </div>
+
+                      <div class="work-slide__controls">
+                        <a href="#" target="_blank" class="work-slide__link role-text" data-lang="works-link">Website</a>
+                        <button class="button work-slide__button button--team role-text" data-lang="works-btn">Learn more</button>
+                      </div>
+
+                    </div>
+
+                  </article>
+                </div>
+
+                <div class="swiper-slide">
+                  <article class="work-slide">
+
+                    <img src="./images/preloader.svg" data-load="./images/icons/react.png" alt="react" class="work-slide__label">
+
+                    <div class="work-slide__img-wrapper">
+                      <img src="./images/preloader.svg" data-load="./images/illustrations/revr.png" alt="Revr" class="work-slide__image">
+                    </div>
+
+                    <div class="work-slide__body">
+
+                      <div class="work-slide__info">
+                        <h3 class="work-slide__title name-text">Revr</h3>
+                        <p class="work-slide__text work-text" data-lang="works-text3">Site on Next.js and React.</p>
+                      </div>
+
+                      <div class="work-slide__controls">
+                        <a href="#" target="_blank" class="work-slide__link role-text" data-lang="works-link">Website</a>
+                        <button class="button work-slide__button button--team role-text" data-lang="works-btn">Learn more</button>
+                      </div>
+
+                    </div>
+
+                  </article>
+                </div>
+
+                <div class="swiper-slide">
+                  <article class="work-slide">
+
+                    <img src="./images/preloader.svg" data-load="./images/icons/wordpress.png" alt="wp" class="work-slide__label">
+
+                    <div class="work-slide__img-wrapper">
+                      <img src="./images/preloader.svg" data-load="./images/illustrations/rose.png" alt="Rose" class="work-slide__image">
+                    </div>
+
+                    <div class="work-slide__body">
+
+                      <div class="work-slide__info">
+                        <h3 class="work-slide__title name-text">RoseWellness</h3>
+                        <p class="work-slide__text work-text" data-lang="works-text2">Complete overhaul of an existing site and increased Pagespeed.</p>
+                      </div>
+
+                      <div class="work-slide__controls">
+                        <a href="#" target="_blank" class="work-slide__link role-text" data-lang="works-link">Website</a>
+                        <button class="button work-slide__button button--team role-text" data-lang="works-btn">Learn more</button>
+                      </div>
+
+                    </div>
+
+                  </article>
+                </div>
+
+                <div class="swiper-slide">
+                  <article class="work-slide">
+
+                    <img src="./images/preloader.svg" data-load="./images/icons/react.png" alt="react" class="work-slide__label">
+
+                    <div class="work-slide__img-wrapper">
+                      <img src="./images/preloader.svg" data-load="./images/illustrations/revr.png" alt="Revr" class="work-slide__image">
+                    </div>
+
+                    <div class="work-slide__body">
+
+                      <div class="work-slide__info">
+                        <h3 class="work-slide__title name-text">Revr</h3>
+                        <p class="work-slide__text work-text" data-lang="works-text3">Site on Next.js and React.</p>
+                      </div>
+
+                      <div class="work-slide__controls">
+                        <a href="#" target="_blank" class="work-slide__link role-text" data-lang="works-link">Website</a>
+                        <button class="button work-slide__button button--team role-text" data-lang="works-btn">Learn more</button>
+                      </div>
+
+                    </div>
+
+                  </article>
+                </div>
+
+                <div class="swiper-slide">
+                  <article class="work-slide">
+
+                    <img src="./images/preloader.svg" data-load="./images/icons/wordpress.png" alt="wp" class="work-slide__label">
+
+                    <div class="work-slide__img-wrapper">
+                      <img src="./images/preloader.svg" data-load="./images/illustrations/thc.png" alt="THC" class="work-slide__image">
+                    </div>
+
+                    <div class="work-slide__body">
+
+                      <div class="work-slide__info">
+                        <h3 class="work-slide__title name-text">THC</h3>
+                        <p class="work-slide__text work-text" data-lang="works-text1">Creating a site from scratch on React, Gatsby, back-end on WordPress.</p>
+                      </div>
+
+                      <div class="work-slide__controls">
+                        <a href="#" target="_blank" class="work-slide__link role-text" data-lang="works-link">Website</a>
+                        <button class="button work-slide__button button--team role-text" data-lang="works-btn">Learn more</button>
+                      </div>
+
+                    </div>
+
+                  </article>
+                </div>
+
+              </div>
+            </div>
+
+            <div class="slider-controls slider__slider-controls">
+
+              <button class="slider-controls__btn slider-controls__btn--prev">
+                <img src="./images/icons/arrow.png" alt="prev" class="slider-controls__icon">
+              </button>
+
+              <button class="slider-controls__btn slider-controls__btn--next">
+                <img src="./images/icons/arrow.png" alt="next" class="slider-controls__icon">
+              </button>
+
+            </div>
+
+          </div>
+
+        </div>
+
+        <div class="bg-decore works__bg-decore" data-load-block>
+          <div class="bg-decore__circle bg-decore__circle--works"></div>
+          <img src="./images/backgrounds/react-bg.png" alt="react" class="bg-decore__circle bg-decore__circle--react">
+        </div>
+
+      </article>
+
     </main>
 
     <footer class="footer"></footer>
