Adaptive for works-block done

--- a/src/index.html
+++ b/src/index.html
@@ -255,7 +255,7 @@
 
               <div class="pagination skills-slider__pagination"></div>
 
-              <div class="slider-controls skills-slider__slider-controls">
+              <div class="slider-controls slider-controls--dark skills-slider__slider-controls">
 
                 <button class="slider-controls__btn slider-controls__btn--prev">
                   <img src="./images/icons/arrow.png" alt="prev" class="slider-controls__icon">
@@ -326,7 +326,7 @@
 
           <div class="block-intro__controls">
 
-            <button class="button button--common link-text" data-popup="popup-msg--com" data-lang="tools-btn">Contact the lead developer</button>
+            <button class="button block-intro__button button--common link-text" data-popup="popup-msg--com" data-lang="tools-btn">Contact the lead developer</button>
             <span class="explore tools__explore small-text" data-lang="explore">Scroll to explore</span>
 
           </div>
@@ -829,7 +829,7 @@
           <em class="block-intro__label label-text" data-lang="works-label">Showcase</em>
           <h2 class="block-intro__title head-text" data-lang="works-title">Recent Works</h2>
           <p class="block-intro__subtitle parag-text" data-lang="works-sub">We will help to develop your best project based on your idea.</p>
-          <button class="button works__button button--common link-text" data-lang="works-button">View More Projects</button>
+          <button class="button block-intro__button button--common link-text" data-lang="works-button">View More Projects</button>
 
         </div>
 
