Adaptive for reviews-block done

--- a/src/index.html
+++ b/src/index.html
@@ -1113,7 +1113,7 @@
 
                     <article class="review">
 
-                      <h3 class="review__title adv-text" data-lang="review3-title">Front-end engineer with Wordpress, Gutenberg, and React experience needed for headless blog</h3>
+                      <h3 class="review__title adv-text" data-lang="review3-title">Front-end engineer with Wordpress.</h3>
 
                       <div class="review__info">
 
