Basic version of qa-block done

--- a/src/index.html
+++ b/src/index.html
@@ -1201,6 +1201,133 @@
 
       </article>
 
+      <article class="qa" data-title="qa">
+
+        <div class="block-intro qa__block-intro">
+          <h2 class="block-intro__title head-text" data-lang="qa-title">Frequently asked questions</h2>
+        </div>
+
+        <div class="qa__content">
+
+          <div class="qa__column">
+
+            <div class="question" data-drop-answer="main">
+
+              <button class="question__header" data-drop-answer="trigger">
+                <strong class="question__title slide-text" data-lang="qa1-question">Who did we work with?</strong>
+                <span class="question__indicator"></span>
+              </button>
+
+              <div class="question__body" data-drop-answer="content">
+                <div class="question__inner">
+
+                  <p class="question__text parag-text" data-lang="qa1-answer*">Most of our clients are large financial organizations and companies. You can view the list of clients who have given permission to publish works in the <a class="question__link">Recent Works</a> block.</p>
+
+                </div>
+              </div>
+
+            </div>
+
+            <div class="question" data-drop-answer="main">
+
+              <button class="question__header" data-drop-answer="trigger">
+                <strong class="question__title slide-text" data-lang="qa2-question">What services do we offer to clients?</strong>
+                <span class="question__indicator"></span>
+              </button>
+
+              <div class="question__body" data-drop-answer="content">
+                <div class="question__inner">
+
+                  <ul class="question__list">
+                    <li class="question__li parag-text" data-lang="qa2-li1">Website design and development</li>
+                    <li class="question__li parag-text" data-lang="qa2-li2">Website integration and maintenance</li>
+                    <li class="question__li parag-text" data-lang="qa2-li3">Costomized e-commerce development</li>
+                    <li class="question__li parag-text" data-lang="qa2-li4">CMS development/integration</li>
+                  </ul>
+
+                </div>
+              </div>
+
+            </div>
+
+            <div class="question" data-drop-answer="main">
+
+              <button class="question__header" data-drop-answer="trigger">
+                <strong class="question__title slide-text" data-lang="qa3-question">How is the cost of the project formed?</strong>
+                <span class="question__indicator"></span>
+              </button>
+
+              <div class="question__body" data-drop-answer="content">
+                <div class="question__inner">
+
+                  <p class="question__text parag-text" data-lang="qa3-answer">The cost of services is calculated very simply: the time spent by us is multiplied by the tariff. But we can assure you that they are at the market level.</p>
+
+                </div>
+              </div>
+
+            </div>
+
+          </div>
+
+          <div class="qa__column">
+
+            <div class="question" data-drop-answer="main">
+
+              <button class="question__header" data-drop-answer="trigger">
+                <strong class="question__title slide-text" data-lang="qa4-question">Who owns the right to created solutions?</strong>
+                <span class="question__indicator"></span>
+              </button>
+
+              <div class="question__body" data-drop-answer="content">
+                <div class="question__inner">
+
+                  <p class="question__text parag-text" data-lang="qa4-answer">As a rule, the exclusive rights to the software and the source code are transferred to the customer. Everything related to your project.</p>
+
+                </div>
+              </div>
+
+            </div>
+
+            <div class="question" data-drop-answer="main">
+
+              <button class="question__header" data-drop-answer="trigger">
+                <strong class="question__title slide-text" data-lang="qa5-question">What technologies are used?</strong>
+                <span class="question__indicator"></span>
+              </button>
+
+              <div class="question__body" data-drop-answer="content">
+                <div class="question__inner">
+
+                  <p class="question__text parag-text" data-lang="qa5-answer*">We can solve any problem using any technology. These are not big words, they really are. At <a class="question__link">smart-ui</a>, a team of employees with the highest set of knowledge.</p>
+
+                </div>
+              </div>
+
+            </div>
+
+            <div class="question" data-drop-answer="main">
+
+              <button class="question__header" data-drop-answer="trigger">
+                <strong class="question__title slide-text" data-lang="qa6-question">How long does it take to develop a project?</strong>
+                <span class="question__indicator"></span>
+              </button>
+
+              <div class="question__body" data-drop-answer="content">
+                <div class="question__inner">
+
+                  <p class="question__text parag-text" data-lang="qa6-answer">Velocity doubled by quality is what our Agile approach boils down to.</p>
+
+                </div>
+              </div>
+
+            </div>
+
+          </div>
+
+        </div>
+
+      </article>
+
     </main>
 
     <footer class="footer"></footer>
